Trying to make lincheck start